Updates and fixes docs and adds a new contributor

--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "Connell, Andrew <me@andrewconnell.com>",
     "De Cleyre, Nico <nico.de.cleyre@gmail.com>",
     "Deshpande, Vardhaman <vardhaman.rd@gmail.com>",
+    "Dojcsák, János <dojcsak.janos@gmail.com>",
     "Dyjas, Robert <15113729+robdy@users.noreply.github.com>",
     "Faleel, Mohamed Ashiq <ashiqf@gmail.com>",
     "Flores, Gaston <gaston.flrs@gmail.com>",
