--- a/package.json
+++ b/package.json
@@ -251,7 +251,8 @@
     "strip-json-comments": "^3.1.1",
     "typescript": "^4.9.5",
     "update-notifier": "^5.1.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "yaml": "^2.3.1"
   },
   "devDependencies": {
     "@microsoft/microsoft-graph-types": "^2.35.0",
