--- a/package.json
+++ b/package.json
@@ -228,16 +228,18 @@
     "Zachariassen Laksafoss, Trygvi <trygvi.laksafoss@gmail.com>"
   ],
   "dependencies": {
+    "@azure/msal-common": "^13.2.1",
     "@azure/msal-node": "^1.18.1",
     "@xmldom/xmldom": "^0.8.10",
     "adaptive-expressions": "^4.20.0",
-    "adaptivecards": "^2.11.3",
+    "adaptivecards": "^3.0.1",
     "adaptivecards-templating": "^2.3.1",
     "adm-zip": "^0.5.10",
     "applicationinsights": "^2.7.0",
     "axios": "^1.3.4",
     "chalk": "^5.2.0",
     "clipboardy": "^3.0.0",
+    "configstore": "^6.0.0",
     "csv-stringify": "^6.4.0",
     "easy-table": "^1.2.0",
     "inquirer": "^9.2.10",
@@ -274,12 +276,8 @@
     "@typescript-eslint/parser": "^5.62.0",
     "c8": "^7.14.0",
     "eslint": "^8.46.0",
-    "eslint-config-standard": "^17.1.0",
     "eslint-plugin-cli-microsoft365": "file:eslint-rules",
-    "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-mocha": "^10.1.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.1.1",
     "mocha": "^10.2.0",
     "rimraf": "^4.4.0",
     "sinon": "^15.2.0",
