--- a/package.json
+++ b/package.json
@@ -209,7 +209,7 @@
     "Thangavel, Sekar <sekar.thangavel@gmail.com>",
     "Thorild, Fredrik <fredrik.thorild@sogeti.com>",
     "Trinder, Garry <garry.trinder@live.com>",
-    "Tripathi, Saurabh <saurabh.k.a.tripathi@avanade.com>",
+    "Tripathi, Saurabh <saurabh7019@gmail.com>",
     "Vaghasia, Siddharth <siddh.vaghasia@gmail.com>",
     "Van de Voorde, Tim <tim.vdv1995@hotmail.com>",
     "van Dijk, Mark <mark@ichicraft.com>",
