--- a/package.json
+++ b/package.json
@@ -144,6 +144,7 @@
     "Kesavanarayanan, Sudharsan <10280385+sudharsank@users.noreply.github.com>",
     "Khalil, Bassem <bk@bassems-air.home>",
     "Kirkham, Don <donkirkham@live.com>",
+    "Kornet, Michał <kornetmichal@gmail.com>",
     "Kumar, Shantha <34408892+ktskumar@users.noreply.github.com>",
     "Kurian, Cyril C <cyril.kurian2@gmail.com>",
     "Lamber, Patrick <patrick@nubo.eu>",
