Updates package keywords. Closes #5433

--- a/package.json
+++ b/package.json
@@ -31,21 +31,41 @@
     "lint": "eslint --ext .ts src"
   },
   "keywords": [
-    "office 365",
-    "microsoft 365",
-    "sharepoint framework",
-    "o365",
-    "m365",
-    "spfx",
-    "sharepoint online",
-    "sharepoint",
-    "microsoft teams",
-    "microsoft graph",
-    "microsoft flow",
+    "adaptive card",
+    "ai builder",
     "azure active directory",
     "azure ad",
     "azure",
-    "microsoft"
+    "bookings",
+    "dataverse",
+    "entra id",
+    "graph",
+    "m365",
+    "microsoft 365",
+    "microsoft",
+    "o365",
+    "office 365",
+    "onedrive",
+    "onenote",
+    "outlook",
+    "planner",
+    "power apps",
+    "power automate",
+    "power platform",
+    "purview",
+    "search",
+    "sharepoint framework",
+    "sharepoint online",
+    "sharepoint",
+    "skype",
+    "spfx",
+    "teams",
+    "tenant",
+    "todo",
+    "viva connections",
+    "viva engage",
+    "viva",
+    "yammer"
   ],
   "author": "https://github.com/pnp/cli-microsoft365/graphs/contributors",
   "maintainers": [
