Adds new contributor

--- a/package.json
+++ b/package.json
@@ -173,6 +173,7 @@
     "Lengelle, Veronique <25181757+veronicageek@users.noreply.github.com>",
     "Levert, Sebastien <slevert@outlook.com>",
     "Lingstuyl, Martin <mlingstuyl@live.com>",
+    "Macháček, Martin <machacek@edhouse.cz>",
     "Maillot, Michaël <battosaimykle@gmail.com>",
     "Mastykarz, Waldek <waldek@mastykarz.nl>",
     "McDonnell, Kevin <kevin@mcd79.com>",
