--- a/package.json
+++ b/package.json
@@ -156,6 +156,7 @@
     "Hunt, Geoffrey <info@runningdeveloper.com>",
     "Hvam, Allan <ahp@delegate.dk>",
     "Jaakke, Robert <robert.jaakke@mavention.nl>",
+    "Junker Aaron <aaron.junker@outlook.com>",
     "Kailasam, Balamurugan <kshsbala@engineer.com>",
     "Karda, Akash <akashkarda@gmail.com>",
     "Kasireddy, Prasad <prasad.gietcse@gmail.com>",
@@ -174,6 +175,7 @@
     "Levert, Sebastien <slevert@outlook.com>",
     "Lingstuyl, Martin <mlingstuyl@live.com>",
     "Macháček, Martin <machacek@edhouse.cz>",
+    "Maestrini Tobias <tobias@bee365.ch>",
     "Maillot, Michaël <battosaimykle@gmail.com>",
     "Mastykarz, Waldek <waldek@mastykarz.nl>",
     "McDonnell, Kevin <kevin@mcd79.com>",
