--- a/.c8rc.json
+++ b/.c8rc.json
@@ -1,5 +1,11 @@
 {
-  "exclude": ["**/*.spec.js", "**/*.mock.js", "**/clientsidepages.js", "docs"],
+  "exclude": [
+    "**/*.spec.js",
+    "**/*.mock.js",
+    "**/clientsidepages.js",
+    "docs",
+    "**/ci-test-summary.cjs"
+  ],
   "reporter": ["lcov", "text", "text-summary"],
   "check-coverage": true,
   "branches": 100,
