Adds tests and coverage summary to workflow. Closes #3288
Reorganize scripts

--- a/.mocharc.json
+++ b/.mocharc.json
@@ -1,9 +1,7 @@
 {
-  "extension": [
-    "ts"
-  ],
+  "extension": ["ts"],
   "spec": "dist/**/*.spec.js",
-  "reporter": "min",
+  "reporter": "scripts/ci-test-summary.cjs",
   "require": "source-map-support/register",
   "watch": "dist/**/*.js",
   "timeout": 10000,
