--- a/package.json
+++ b/package.json
@@ -101,12 +101,12 @@
     },
     {
       "name": "Jasey Waegebaert",
-      "email": "jaseyw@gmigroup.be",
+      "email": "38426621+Jwaegebaert@users.noreply.github.com",
       "web": "https://github.com/Jwaegebaert"
     },
     {
       "name": "Milan Holemans",
-      "email": "Milan.Holemans@vanroey.be",
+      "email": "11723921+milanholemans@users.noreply.github.com",
       "web": "https://github.com/milanholemans"
     }
   ],
@@ -145,7 +145,7 @@
     "Hagström, Joakim <johags@johags-sb2.localdomain>",
     "Harding, Phil <pil.harding@platinumdogs.co.uk>",
     "Hawrylak, Paweł <phawrylak@outlook.com>",
-    "Holemans, Milan <Milan.Holemans@vanroey.be>",
+    "Holemans, Milan <11723921+milanholemans@users.noreply.github.com>",
     "Honen, Nicholas <nickhonen@gmail.com>",
     "Högberg, Joakim <joakim.hogberg@bravero.se>",
     "Hunt, Geoffrey <info@runningdeveloper.com>",
@@ -200,6 +200,7 @@
     "Rathi, Tanmay <tanmay_rathi@intuit.com>",
     "Reekmans, Yannick <reekmans.yannick@gmail.com>",
     "Raghwendra Rishabh <rishabhraghwendra2002@gmail.com>",
+    "Rodrigues, Joel <19577724+joelfmrodrigues@users.noreply.github.com>",
     "Romano, Rodrigo <rodrigo@rodrigoromano.net>",
     "Romão, Douglas <douglas.romao@trentim.com>",
     "Rozinov, Roman <roman.rozinov@sogeti.com>",
@@ -236,7 +237,7 @@
     "van Rousselt, Rick <rick.vanrousselt@outlook.com>",
     "Velliah, Joseph <joseph@sprider.org>",
     "Verbeeck, Mathijs <verbeeckmathijs@gmail.com>",
-    "Waegebaert, Jasey <jaseyw@gmigroup.be>",
+    "Waegebaert, Jasey <38426621+Jwaegebaert@users.noreply.github.com>",
     "Wilen, Wictor <wictor@wictorwilen.se>",
     "Williams, Rabia <rabiawilliams@gmail.com>",
     "Wojcik, Adam <adam.wojcik.it@gmail.com>",
