Adds Gustavo Velez as contributor

--- a/package.json
+++ b/package.json
@@ -235,6 +235,7 @@
     "van Hunen, Erwin <erwin.van.hunen@outlook.com>",
     "van Iersel, Cas <cvaniersel@portiva.nl>",
     "van Rousselt, Rick <rick.vanrousselt@outlook.com>",
+    "Velez, Gustavo <gustavo@gavd.net>",
     "Velliah, Joseph <joseph@sprider.org>",
     "Verbeeck, Mathijs <verbeeckmathijs@gmail.com>",
     "Waegebaert, Jasey <38426621+Jwaegebaert@users.noreply.github.com>",
