--- a/docs/package.json
+++ b/docs/package.json
@@ -16,9 +16,10 @@
   },
   "dependencies": {
     "@docusaurus/core": "^3.0.0",
+    "@docusaurus/plugin-client-redirects": "^3.0.0",
     "@docusaurus/preset-classic": "^3.0.0",
-    "@docusaurus/types": "^3.0.0",
     "@docusaurus/theme-mermaid": "^3.0.0",
+    "@docusaurus/types": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
     "@mendable/search": "^0.0.183",
     "clsx": "^2.0.0",
