--- a/package.json
+++ b/package.json
@@ -166,7 +166,7 @@
     "Kornet, Michał <kornetmichal@gmail.com>",
     "Kumar, Shantha <34408892+ktskumar@users.noreply.github.com>",
     "Kurian, Cyril C <cyril.kurian2@gmail.com>",
-    "Lakshminarayanan, Vedant <vlakshminarayanan@seekasia.com>",
+    "Lakshminarayanan, Vedant <28388096+Vedu1996@users.noreply.github.com>",
     "Lamber, Patrick <patrick@nubo.eu>",
     "Laskewitz, Daniel <daniel@laskewitz.nl>",
     "Lengelle, Veronique <25181757+veronicageek@users.noreply.github.com>",
