--- a/.github/workflows/release_next.yml
+++ b/.github/workflows/release_next.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, windows-latest, ubuntu-latest]
-        node: [18]
+        node: [20]
 
     steps:
       - uses: actions/checkout@v3
@@ -51,13 +51,13 @@ jobs:
       matrix:
         os: [macos-latest, windows-latest, ubuntu-latest]
         # node versions to run tests on
-        nodeRun: [18]
-        # node versions on which code was built and should be tested
-        nodeBuild: [18]
+        nodeRun: [20]
+        # node version on which code was built and should be tested
+        nodeBuild: [20]
         include:
           - os: ubuntu-latest
-            nodeRun: 20
-            nodeBuild: 18
+            nodeRun: 18
+            nodeBuild: 20
 
     steps:
       - name: Configure pagefile
@@ -92,21 +92,21 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: npm ci
       - name: Test with coverage
-        # we run coverage only on Node@18
-        if: matrix.nodeRun == 18
+        # we run coverage only on Node that was use to build
+        if: matrix.nodeRun == matrix.nodeBuild
         run: npm test
       - name: Test without coverage
         # we want to run tests on older Node versions to ensure that code works
-        if: matrix.nodeRun != 18
+        if: matrix.nodeRun != matrix.nodeBuild
         run: npm run test:test
       - name: Compress output (non-Windows)
-        if: matrix.nodeRun == 18 && matrix.os != 'windows-latest' && always()
+        if: matrix.nodeRun == matrix.nodeBuild && matrix.os != 'windows-latest'  && always()
         run: tar -cvf coverage.tar coverage
       - name: Compress output (Windows)
-        if: matrix.nodeRun == 18 && matrix.os == 'windows-latest' && always()
+        if: matrix.nodeRun == matrix.nodeBuild && matrix.os == 'windows-latest' && always()
         run: 7z a -ttar -r coverage.tar coverage
       - uses: actions/upload-artifact@v3
-        if: matrix.nodeRun == 18 && always()
+        if: matrix.nodeRun == matrix.nodeBuild && always()
         with:
           name: coverage-${{ matrix.os }}-${{ matrix.nodeRun }}
           path: coverage.tar
@@ -121,7 +121,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 20
 
       - name: Cache node modules
         id: cache
@@ -155,13 +155,13 @@ jobs:
     steps:
       - uses: actions/download-artifact@v3
         with:
-          name: build-ubuntu-latest-18
+          name: build-ubuntu-latest-20
       - name: Unpack build artifact
         run: tar -xvf build.tar && rm build.tar
-      - name: Use Node.js 18
+      - name: Use Node.js 20
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 20
           registry-url: 'https://registry.npmjs.org'
       - name: Cache node modules
         id: cache
@@ -169,7 +169,7 @@ jobs:
         with:
           path: |
             **/node_modules
-          key: node_modules-ubuntu-latest-18-${{ hashFiles('**/npm-shrinkwrap.json') }}
+          key: node_modules-ubuntu-latest-20-${{ hashFiles('**/npm-shrinkwrap.json') }}
       - name: Restore dependencies
         if: steps.cache.outputs.cache-hit != 'true'
         run: npm ci
@@ -184,7 +184,7 @@ jobs:
       - name: Upload build artifact
         uses: actions/upload-artifact@v3
         with:
-          name: build-ubuntu-latest-18
+          name: build-ubuntu-latest-20
           path: build.tar
   deploy_docs:
     if: github.repository_owner == 'pnp'
@@ -211,13 +211,13 @@ jobs:
     steps:
       - uses: actions/download-artifact@v3
         with:
-          name: build-ubuntu-latest-18
+          name: build-ubuntu-latest-20
       - name: Unpack build artifact
         run: tar -xvf build.tar && rm build.tar
-      - name: Use Node.js 18
+      - name: Use Node.js 20
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 20
           registry-url: 'https://registry.npmjs.org'
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
