--- a/package.json
+++ b/package.json
@@ -28,10 +28,7 @@
     "test:version": "node scripts/check-version.js",
     "test:cov": "c8 npm run test:test",
     "test:test": "mocha",
-    "lint": "eslint --ext .ts src",
-    "ci:test": "npm run test:version && npm run lint && npm run ci:test:cov",
-    "ci:test:cov": "c8 npm run ci:test:test",
-    "ci:test:test": "mocha --reporter scripts/ci-test-summary.cjs"
+    "lint": "eslint --ext .ts src"
   },
   "keywords": [
     "adaptive card",
@@ -280,6 +277,7 @@
     "yaml": "^2.3.4"
   },
   "devDependencies": {
+    "@actions/core": "^1.10.1",
     "@microsoft/microsoft-graph-types": "^2.40.0",
     "@types/adm-zip": "^0.5.5",
     "@types/jmespath": "^0.15.2",
