Updates 'package watch' script to support new commands. Closes #5835

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc -p . && node scripts/write-all-commands.js && node scripts/copy-files.js",
-    "watch": "tsc -w -p .",
+    "watch": "tsc-watch --onSuccess \"node scripts/write-all-commands.js\"",
     "clean": "rimraf ./dist",
     "test": "npm run test:version && npm run lint && npm run test:cov",
     "test:version": "node scripts/check-version.js",
@@ -320,6 +320,7 @@
     "mocha": "^11.7.4",
     "rimraf": "^6.0.1",
     "sinon": "^21.0.0",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "tsc-watch": "^7.2.0"
   }
 }
