Adds support for node@22

--- a/.github/workflows/release_next.yml
+++ b/.github/workflows/release_next.yml
@@ -58,6 +58,9 @@ jobs:
           - os: ubuntu-latest
             nodeRun: 18
             nodeBuild: 20
+          - os: ubuntu-latest
+            nodeRun: 22
+            nodeBuild: 20
 
     steps:
       - name: Configure pagefile
