--- a/package.json
+++ b/package.json
@@ -108,6 +108,11 @@
       "name": "Milan Holemans",
       "email": "11723921+milanholemans@users.noreply.github.com",
       "web": "https://github.com/milanholemans"
+    },
+    {
+      "name": "Mathijs Verbeeck",
+      "email": "verbeeckmathijs@gmail.com",
+      "web": "https://github.com/MathijsVerbeeck"
     }
   ],
   "contributors": [
