--- a/package.json
+++ b/package.json
@@ -156,6 +156,7 @@
     "Hunt, Geoffrey <info@runningdeveloper.com>",
     "Hvam, Allan <ahp@delegate.dk>",
     "Jaakke, Robert <robert.jaakke@mavention.nl>",
+    "Jain, Lovy <54174168+lovyjain@users.noreply.github.com>",
     "Junker Aaron <aaron.junker@outlook.com>",
     "Kailasam, Balamurugan <kshsbala@engineer.com>",
     "Karda, Akash <akashkarda@gmail.com>",
