--- a/package.json
+++ b/package.json
@@ -134,6 +134,7 @@
     "Calabro, David <davej.calabro@gmail.com>",
     "Choudhary, Karnail Singh <pradhankarnail@gmail.com>",
     "Connell, Andrew <me@andrewconnell.com>",
+    "D'Andrea, Nello <nello.dandrea@mobi.ch>",
     "De Cleyre, Nico <nico.de.cleyre@gmail.com>",
     "Deshpande, Vardhaman <vardhaman.rd@gmail.com>",
     "Dojcsák, János <dojcsak.janos@gmail.com>",
