--- a/package.json
+++ b/package.json
@@ -267,6 +267,7 @@
     "chalk": "^5.3.0",
     "clipboardy": "^4.0.0",
     "configstore": "^7.0.0",
+    "csv-parse": "^5.5.6",
     "csv-stringify": "^6.5.1",
     "easy-table": "^1.2.0",
     "jmespath": "^0.16.0",
