--- a/.github/workflows/release_next.yml
+++ b/.github/workflows/release_next.yml
@@ -93,6 +93,14 @@ jobs:
       - name: Restore dependencies
         if: steps.cache.outputs.cache-hit != 'true'
         run: npm ci
+      - name: Cache .eslintcache
+        if: matrix.nodeRun == matrix.nodeBuild
+        id: eslintcache
+        uses: actions/cache@v4
+        with:
+          path: |
+            .eslintcache
+          key: eslintcache-${{ matrix.os }}-${{ hashFiles('npm-shrinkwrap.json', '.eslintrc.cjs') }}
       - name: Test with coverage
         # we run coverage only on Node that was used to build
         if: matrix.nodeRun == matrix.nodeBuild
