--- a/package.json
+++ b/package.json
@@ -252,17 +252,17 @@
     "Zachariassen Laksafoss, Trygvi <trygvi.laksafoss@gmail.com>"
   ],
   "dependencies": {
-    "@azure/msal-common": "^14.14.2",
-    "@azure/msal-node": "^2.13.1",
-    "@inquirer/confirm": "^3.2.0",
-    "@inquirer/input": "^2.3.0",
-    "@inquirer/select": "^2.5.0",
-    "@xmldom/xmldom": "^0.9.2",
-    "adaptive-expressions": "^4.23.0",
+    "@azure/msal-common": "14.15",
+    "@azure/msal-node": "2.15",
+    "@inquirer/confirm": "^5.0.0",
+    "@inquirer/input": "^4.0.0",
+    "@inquirer/select": "^4.0.0",
+    "@xmldom/xmldom": "^0.9.3",
+    "adaptive-expressions": "^4.23.1",
     "adaptivecards": "^3.0.4",
     "adaptivecards-templating": "^2.3.1",
     "adm-zip": "^0.5.16",
-    "applicationinsights": "^2.9.6",
+    "applicationinsights": "^3.3.0",
     "axios": "^1.7.7",
     "chalk": "^5.3.0",
     "clipboardy": "^4.0.0",
@@ -276,22 +276,22 @@
     "open": "^10.1.0",
     "semver": "^7.6.3",
     "strip-json-comments": "^5.0.1",
-    "typescript": "^5.5.4",
-    "update-notifier": "^7.3.0",
+    "typescript": "^5.6.2",
+    "update-notifier": "^7.3.1",
     "uuid": "^10.0.0",
     "yaml": "^2.5.1",
     "yargs-parser": "^21.1.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@actions/core": "^1.10.1",
+    "@actions/core": "^1.11.1",
     "@microsoft/microsoft-graph-types": "^2.40.0",
     "@types/adm-zip": "^0.5.5",
     "@types/jmespath": "^0.15.2",
     "@types/json-schema": "^7.0.15",
     "@types/json-to-ast": "^2.1.4",
-    "@types/mocha": "^10.0.7",
-    "@types/node": "^20.16.5",
+    "@types/mocha": "^10.0.9",
+    "@types/node": "^20.16.11",
     "@types/node-forge": "^1.3.11",
     "@types/omelette": "^0.4.4",
     "@types/semver": "^7.5.8",
@@ -307,7 +307,7 @@
     "eslint-plugin-mocha": "^10.5.0",
     "mocha": "^10.7.3",
     "rimraf": "^6.0.1",
-    "sinon": "^18.0.0",
+    "sinon": "^19.0.2",
     "source-map-support": "^0.5.21"
   }
 }
