--- a/package.json
+++ b/package.json
@@ -177,7 +177,7 @@
     "Levert, Sebastien <slevert@outlook.com>",
     "Lingstuyl, Martin <mlingstuyl@live.com>",
     "Macháček, Martin <machacek@edhouse.cz>",
-    "Maestrini, Tobias <tobias.maesetrini@gmail.com>",
+    "Maestrini, Tobias <tobias.maestrini@gmail.com>",
     "Maillot, Michaël <battosaimykle@gmail.com>",
     "Mastykarz, Waldek <waldek@mastykarz.nl>",
     "McDonnell, Kevin <kevin@mcd79.com>",
