--- a/package.json
+++ b/package.json
@@ -253,23 +253,23 @@
     "Zachariassen Laksafoss, Trygvi <trygvi.laksafoss@gmail.com>"
   ],
   "dependencies": {
-    "@azure/msal-common": "14.15",
-    "@azure/msal-node": "2.15",
-    "@inquirer/confirm": "^5.0.0",
-    "@inquirer/input": "^4.0.0",
-    "@inquirer/select": "^4.0.0",
-    "@xmldom/xmldom": "^0.9.3",
+    "@azure/msal-common": "^14.16.0",
+    "@azure/msal-node": "^2.16.2",
+    "@inquirer/confirm": "^5.1.0",
+    "@inquirer/input": "^4.1.0",
+    "@inquirer/select": "^4.0.3",
+    "@xmldom/xmldom": "^0.9.6",
     "adaptive-expressions": "^4.23.1",
     "adaptivecards": "^3.0.4",
     "adaptivecards-templating": "^2.3.1",
     "adm-zip": "^0.5.16",
-    "applicationinsights": "^3.3.0",
-    "axios": "^1.7.7",
+    "applicationinsights": "^3.4.0",
+    "axios": "^1.7.9",
     "chalk": "^5.3.0",
     "clipboardy": "^4.0.0",
     "configstore": "^7.0.0",
-    "csv-parse": "^5.5.6",
-    "csv-stringify": "^6.5.1",
+    "csv-parse": "^5.6.0",
+    "csv-stringify": "^6.5.2",
     "easy-table": "^1.2.0",
     "jmespath": "^0.16.0",
     "json-to-ast": "^2.1.0",
@@ -278,22 +278,22 @@
     "open": "^10.1.0",
     "semver": "^7.6.3",
     "strip-json-comments": "^5.0.1",
-    "typescript": "^5.6.2",
+    "typescript": "^5.7.2",
     "update-notifier": "^7.3.1",
-    "uuid": "^10.0.0",
-    "yaml": "^2.5.1",
+    "uuid": "^11.0.3",
+    "yaml": "^2.6.1",
     "yargs-parser": "^21.1.1",
-    "zod": "^3.23.8"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@actions/core": "^1.11.1",
     "@microsoft/microsoft-graph-types": "^2.40.0",
-    "@types/adm-zip": "^0.5.5",
+    "@types/adm-zip": "^0.5.7",
     "@types/jmespath": "^0.15.2",
     "@types/json-schema": "^7.0.15",
     "@types/json-to-ast": "^2.1.4",
-    "@types/mocha": "^10.0.9",
-    "@types/node": "^20.16.11",
+    "@types/mocha": "^10.0.10",
+    "@types/node": "^20.17.10",
     "@types/node-forge": "^1.3.11",
     "@types/omelette": "^0.4.4",
     "@types/semver": "^7.5.8",
@@ -303,11 +303,11 @@
     "@types/yargs-parser": "^21.0.3",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
-    "c8": "^10.1.2",
-    "eslint": "^8.57.0",
+    "c8": "^10.1.3",
+    "eslint": "^8.57.1",
     "eslint-plugin-cli-microsoft365": "file:eslint-rules",
     "eslint-plugin-mocha": "^10.5.0",
-    "mocha": "^10.7.3",
+    "mocha": "^11.0.1",
     "rimraf": "^6.0.1",
     "sinon": "^19.0.2",
     "source-map-support": "^0.5.21"
