--- a/docs/package.json
+++ b/docs/package.json
@@ -15,27 +15,27 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@docusaurus/core": "^3.5.2",
-    "@docusaurus/plugin-client-redirects": "^3.5.2",
-    "@docusaurus/preset-classic": "^3.5.2",
-    "@docusaurus/theme-mermaid": "^3.5.2",
-    "@docusaurus/types": "^3.5.2",
-    "@mdx-js/react": "^3.0.1",
+    "@docusaurus/core": "^3.6.3",
+    "@docusaurus/faster": "^3.6.3",
+    "@docusaurus/plugin-client-redirects": "^3.6.3",
+    "@docusaurus/preset-classic": "^3.6.3",
+    "@docusaurus/theme-mermaid": "^3.6.3",
+    "@docusaurus/types": "^3.6.3",
+    "@mdx-js/react": "^3.1.0",
     "@mendable/search": "^0.0.206",
     "clsx": "^2.1.1",
-    "docusaurus-plugin-sass": "^0.2.5",
-    "mdast-util-from-markdown": "^2.0.1",
-    "prism-react-renderer": "^2.4.0",
+    "docusaurus-plugin-sass": "^0.2.6",
+    "mdast-util-from-markdown": "^2.0.2",
+    "prism-react-renderer": "^2.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^3.5.2",
-    "@docusaurus/tsconfig": "^3.5.2",
+    "@docusaurus/module-type-aliases": "^3.6.3",
+    "@docusaurus/tsconfig": "^3.6.3",
     "asciinema-player": "^3.8.1",
-    "docusaurus-node-polyfills": "^1.0.0",
-    "typescript": "^5.6.3"
+    "typescript": "^5.7.2"
   },
   "browserslist": {
     "production": [
