Adds new contributor

--- a/package.json
+++ b/package.json
@@ -237,6 +237,7 @@
     "Trinder, Garry <garry.trinder@live.com>",
     "Tripathi, Saurabh <saurabh7019@gmail.com>",
     "Vaghasia, Siddharth <siddh.vaghasia@gmail.com>",
+    "van Brug, Herco <hercovanbrug@hotmail.com>",
     "Van de Voorde, Tim <tim.vdv1995@hotmail.com>",
     "van Dijk, Mark <mark@ichicraft.com>",
     "van Hunen, Erwin <erwin.van.hunen@outlook.com>",
