Updates Dev Proxy configuration to v0.29.2 Adds support for site-relative URLs in detecting permissions

--- a/.devproxy/api-specs/sharepoint.yaml
+++ b/.devproxy/api-specs/sharepoint.yaml
@@ -4,10 +4,12 @@ info:
   description: SharePoint REST API
   version: v1.0
 servers:
-  - url: https://{tenant}.sharepoint.com
+  - url: https://{tenant}.sharepoint.com/{site}
     variables:
       tenant:
         default: contoso
+      site:
+        default: ""
 components:
   securitySchemes:
     delegated:
