--- a/.devproxy/api-specs/sharepoint.yaml
+++ b/.devproxy/api-specs/sharepoint.yaml
@@ -104,6 +104,47 @@ paths:
       responses:
         200:
           description: OK
+  /_api/web/GetFileById({fileId})/versions/:
+    get:
+      parameters:
+        - name: fileId
+          in: path
+          required: true
+          schema:
+            type: string
+          example: "'19bbfec4-4425-4660-95cb-da1887baa7b9'"
+      security:
+        - delegated:
+            - AllSites.Read
+            - AllSites.Write
+            - AllSites.Manage
+            - AllSites.FullControl
+      responses:
+        200:
+          description: OK
+  /_api/web/GetFileById({fileId})/versions({versionId})/SetExpirationDate():
+    post:
+      parameters:
+        - name: fileId
+          in: path
+          required: true
+          schema:
+            type: string
+          example: "'19bbfec4-4425-4660-95cb-da1887baa7b9'"
+        - name: versionId
+          in: path
+          required: true
+          schema:
+            type: integer
+          example: 1030
+      security:
+        - delegated:
+            - AllSites.Write
+            - AllSites.Manage
+            - AllSites.FullControl
+      responses:
+        200:
+          description: OK
   /_api/web/GetFolderByServerRelativePath(DecodedUrl={folderPath}):
     get:
       parameters:
