Adds new contributor

--- a/package.json
+++ b/package.json
@@ -208,6 +208,7 @@
     "Raju, Arnie <arnie.raju@thesolutioncollective.com.au>",
     "Ramalho, David <dramalho@storm.ie>",
     "Rathi, Tanmay <tanmay_rathi@intuit.com>",
+    "Raval, Nirav <niravraval34@gmail.com>",
     "Reekmans, Yannick <reekmans.yannick@gmail.com>",
     "Raghwendra Rishabh <rishabhraghwendra2002@gmail.com>",
     "Rodrigues, Joel <19577724+joelfmrodrigues@users.noreply.github.com>",
