Adds new maintainer

--- a/package.json
+++ b/package.json
@@ -103,6 +103,11 @@
       "web": "https://www.blimped.nl/"
     },
     {
+      "name": "Martin Machacek",
+      "email": "machacek@edhouse.cz",
+      "web": "https://github.com/MartinM85"
+    },
+    {
       "name": "Jasey Waegebaert",
       "email": "38426621+Jwaegebaert@users.noreply.github.com",
       "web": "https://github.com/Jwaegebaert"
