Updates GH workflow to manual dispatch

--- a/.github/workflows/release_next.yml
+++ b/.github/workflows/release_next.yml
@@ -1,9 +1,8 @@
 name: Release next
 
 on:
-  push:
-    branches: [main]
-
+  workflow_dispatch:        
+      
 jobs:
   build:
     if: github.repository_owner == 'pnp'
