--- a/.devproxy/api-specs/sharepoint.yaml
+++ b/.devproxy/api-specs/sharepoint.yaml
@@ -108,6 +108,8 @@ paths:
       security:
         - delegated:
           - AllSites.FullControl
+        - application:
+          - Sites.FullControl.All
       responses:
         200:
           description: OK
