--- a/.devproxy/api-specs/sharepoint.yaml
+++ b/.devproxy/api-specs/sharepoint.yaml
@@ -113,6 +113,24 @@ paths:
       responses:
         200:
           description: OK
+  /_api/web/Alerts/DeleteAlert({id}):
+    delete:
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: GUID of the alert to delete
+          schema:
+            type: string
+          example: "'f55e3c17-63ea-456a-8451-48d2839760f7'"
+      security:
+        - delegated:
+          - AllSites.FullControl
+        - application:
+          - Sites.FullControl.All
+      responses:
+        200:
+          description: OK
   /_api/web/folders/addUsingPath(decodedUrl={folderPath}):
     post:
       parameters:
