--- a/package.json
+++ b/package.json
@@ -134,6 +134,7 @@
     "Bauer, Stefan <stefan.bauer@n8d.at>",
     "Bernier, Hugo <hugoabernier@live.ca>",
     "Bewernitz, Christian <coder@karfau.de>",
+    "Bezawada, Nishkalank <nishkalankbezawada@outlook.com>",
     "Bhardwaj, Aakash <aakashbhardwaj619@gmail.com>",
     "Biret, Vincent <baywet@users.noreply.github.com>",
     "Biro, Peter <Peter.Biro@xs.nestle.com>",
@@ -147,6 +148,7 @@
     "Deshpande, Vardhaman <vardhaman.rd@gmail.com>",
     "Dojcsák, János <dojcsak.janos@gmail.com>",
     "Dyjas, Robert <15113729+robdy@users.noreply.github.com>",
+    "Fahad <72310648+codevfahad@users.noreply.github.com>",
     "Faleel, Mohamed Ashiq <ashiqf@gmail.com>",
     "Flores, Gaston <gaston.flrs@gmail.com>",
     "Ford, Lee <fordyman@gmail.com>",
@@ -165,6 +167,7 @@
     "Hunt, Geoffrey <info@runningdeveloper.com>",
     "Hvam, Allan <ahp@delegate.dk>",
     "Jaakke, Robert <robert.jaakke@mavention.nl>",
+    "Jain, Ayush <urayushjain@gmail.com>",
     "Jain, Lovy <54174168+lovyjain@users.noreply.github.com>",
     "Junker Aaron <aaron.junker@outlook.com>",
     "Kailasam, Balamurugan <kshsbala@engineer.com>",
@@ -176,6 +179,8 @@
     "Khalil, Bassem <bk@bassems-air.home>",
     "Kirkham, Don <donkirkham@live.com>",
     "Kornet, Michał <kornetmichal@gmail.com>",
+    "Kulkarni, Siddheya <siddheyakul@gmail.com>",
+    "Kumar, Malay <91375797+Malay-dev@users.noreply.github.com>",
     "Kumar, Shantha <34408892+ktskumar@users.noreply.github.com>",
     "Kurian, Cyril C <cyril.kurian2@gmail.com>",
     "Lakshminarayanan, Vedant <28388096+Vedu1996@users.noreply.github.com>",
@@ -193,6 +198,7 @@
     "Moon, Andrew <21320638+andrewjymoon@users.noreply.github.com>",
     "Moujahid, Abderahman <rags_place@hotmail.com>",
     "Mücklisch, Steve <steve.muecklisch@gmail.com>",
+    "Mundra, Sanket <sanket.mundra@harness.io>",
     "Nachan, Nanddeep <nanddeepnachan@gmail.com>",
     "Nachan, Smita <smita.nachan@gmail.com>",
     "Nadir, Daniaal <daniaal1030@gmail.com>",
@@ -205,6 +211,7 @@
     "Patel, Ashish <ashishp.nuku@gmail.com>",
     "Patil, Atharva <atharvapatil19202@gmail.com>",
     "Peck, Taaqif <taaqifpeck@gmail.com>",
+    "Piridi, Santhosh Teja <santhosh.piridi123@gmail.com>",
     "Plenevaux, Yannick <yannick.plenevaux@gmail.com>",
     "Powney, Mark <powney.mark@outlook.com>",
     "pramod74 <pramod.lumb@gmail.com>",
